file ref  bug fix

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/locomotive-scroll@5.0.0-beta.11/dist/locomotive-scroll.min.css">
     
     <!-- Custom Stylesheet -->
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="./style.css">
 </head>
 <body data-scroll-container>
 
@@ -722,9 +722,9 @@
 </div>
 
 <!-- Custom JavaScript -->
-<script src="index.js"></script>
-<script src="animation.js"></script>
-<script src="chatbot.js"></script>
+<script src="./index.js"></script>
+<script src="./animation.js"></script>
+<script src="./chatbot.js"></script>
 
 </body>
 </html>
