file href change :

--- a/index.html
+++ b/index.html
@@ -735,7 +735,7 @@
 
 <!-- Custom JavaScript -->
 <script src="./index.js"></script>
-<script src="./animation.js"></script>
+<script src="https://samarthmahendra.github.io/animation.js"></script>
 <script src="./chatbot.js"></script>
 
 </body>
