skills icon grid fix

--- a/index.html
+++ b/index.html
@@ -156,8 +156,7 @@
             <!-- Programming Languages -->
             <div class="skill-category">
                 <h3>Programming Languages</h3>
-                <div class="skills-icons">
-                    <div class="skills-grid">
+                <div class="skills-grid">
                     <div class="skill-item">
                         <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/python/python-original.svg" alt="Python">
                         <p>Python</p>
@@ -229,8 +228,7 @@
             <!-- Frameworks & Libraries -->
             <div class="skill-category">
                 <h3>Frameworks & Libraries</h3>
-                <div class="skills-icons">
-                    <div class="skills-grid">
+                <div class="skills-grid">
                     <div class="skill-item">
                         <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/django/django-plain.svg" alt="Django">
                         <p>Django</p>
@@ -257,8 +255,7 @@
             <!-- Database & Data -->
             <div class="skill-category">
                 <h3>Database & Data</h3>
-                <div class="skills-icons">
-                    <div class="skills-grid">
+                <div class="skills-grid">
                     <div class="skill-item">
                         <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/postgresql/postgresql-original.svg" alt="PostgreSQL">
                         <p>PostgreSQL</p>
@@ -285,8 +282,7 @@
             <!-- Cloud & DevOps -->
             <div class="skill-category">
                 <h3>Cloud & DevOps</h3>
-                <div class="skills-icons">
-                    <div class="skills-grid">
+                <div class="skills-grid">
                     <div class="skill-item">
                         <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/amazonwebservices/amazonwebservices-original.svg" alt="AWS">
                         <p>AWS</p>
@@ -622,7 +618,7 @@
                 <div class="contact-card">
                     <i class="fas fa-envelope"></i>
                     <h4>Email</h4>
-                    <p><a href="mailto:contact@samarthmahendra.com" class="text-link">contact@samarthmahendra.com</a></p>
+                    <p><a href="mailto:samarth.mahendragowda@gmail.com" class="text-link">samarth.mahendragowda@gmail.com</a></p>
                 </div>
                 <div class="contact-card">
                     <i class="fab fa-linkedin"></i>
@@ -635,7 +631,7 @@
                     <p>Boston, MA</p>
                 </div>
             </div>
-            <!-- Contact form removed as per user request -->
+<!-- ... -->
         </div>
     </div>
 </section>
