--- a/index.html
+++ b/index.html
@@ -71,6 +71,7 @@
     
     <div class="container hero-content">
         <div id="developer-animation"></div>
+        <div id="hero-lottie-animation" style="width:120px;height:120px;margin:0 auto 1.5rem;"></div>
         <h1 class="reveal-text" data-splitting>Samarth Mahendra</h1>
         <div class="typing-container">
             <span id="typing-text"></span>
@@ -221,7 +222,6 @@
                                 <span class="progress-percent">70%</span>
                             </div>
                         </div>
-                    </div>
                                     </div>
             </div>
             
@@ -729,6 +729,7 @@
 <script src="./index.js"></script>
 <script src="https://samarthmahendra.github.io/animation.js"></script>
 <script src="./chatbot.js"></script>
+<script src="./lottie-hero.js"></script>
 
 </body>
 </html>
