--- a/index.html
+++ b/index.html
@@ -693,6 +693,7 @@
             <button class="chatbot-resize" id="chatbot-resize" title="Resize">
                 <i class="fas fa-expand-alt"></i>
             </button>
+            <button id="chatbot-fullscreen" title="Fullscreen" style="font-size:1.2em;">&#x26F6;</button>
             <button class="chatbot-close" id="chatbot-close" title="Close">
                 <i class="fas fa-times"></i>
             </button>
