--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
                 <a href="https://www.youtube.com/@msamarthmahendra8082" target="_blank" aria-label="YouTube Channel">
                     <i class="fab fa-youtube"></i>
                 </a>
-                <a href="mailto:contact@samarthmahendra.com" aria-label="Email">
+                <a href="mailto:samarth.mahendragowda@gmail.com" target="_blank" aria-label="Email">
                     <i class="fas fa-envelope"></i>
                 </a>
             </div>
