--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
     src="https://lottie.host/1bca963d-9f21-422b-a455-8656a4e61531/0akKFojK24.lottie"
     background="transparent"
     speed="1"
-    style="width: 100%; height: 100%; margin: -40px auto 0.5rem; display: block;"
+    style="width: 100%; height: 100%; margin: 0 auto 0.5rem; display: block;"
     loop
     autoplay
 ></dotlottie-player>
@@ -147,7 +147,7 @@
                 </a>
             </div>
             
-            <a href="#about" class="button magnetic-button" style="margin-top: 0.3rem;">Discover More</a>
+            <a href="#about" class="button magnetic-button discover-more">Discover More</a>
         </div>
         
         <div id="scroll-indicator"></div>
