--- a/index.html
+++ b/index.html
@@ -749,7 +749,7 @@
 
 <div class="chatbot-container" id="chatbot-container">
     <div class="chatbot-header">
-        <div class="chatbot-title">Chat with Samarth's Assistant</div>
+        <div class="chatbot-title"><i class="fas fa-robot"></i> Chat with Samarth's Assistant</div>
         <div class="chatbot-controls">
             <button class="chatbot-resize" id="chatbot-resize" title="Resize">
                 <i class="fas fa-expand-alt"></i>
@@ -769,8 +769,8 @@
         </div>
         <div id="chatbot-starter-prompts" class="chatbot-starter-prompts">
             <button class="chatbot-starter-prompt">Which of Samarth's projects best showcase his AI and data engineering expertise?</button>
-            <button class="chatbot-starter-prompt">Could you pull up a candidate’s profile and highlight their main qualifications?</button>
-            <button class="chatbot-starter-prompt">How well does this candidate’s resume match this job description?</button>
+            <button class="chatbot-starter-prompt">Could you pull up a Samarth’s profile and highlight his main qualifications?</button>
+            <button class="chatbot-starter-prompt">How well does Samarth's profile match this job description?</button>
         </div>
         <div class="chatbot-input-container">
             <input type="text" id="chatbot-input" class="chatbot-input" placeholder="Type your message here..." autocomplete="off" inputmode="text">
