--- a/index.html
+++ b/index.html
@@ -66,6 +66,7 @@
 <button class="chatbot-toggle" id="chatbot-toggle">
   <i class="fas fa-comment"></i>
 </button>
+<div class="chatbot-popover" id="chatbot-popover"><span class="chatbot-popover-text">Need help? Chat with Samarth's AI!</span></div>
 <div class="chatbot-container" id="chatbot-container">
     <div class="chatbot-header">
         <div class="chatbot-title"><i class="fas fa-robot"></i> Chat with Samarth's Assistant</div>
