Floating animaton UI enhancement #10

--- a/index.html
+++ b/index.html
@@ -35,9 +35,12 @@
     <!-- Custom Stylesheet -->
     <link rel="stylesheet" href="./style.css">
     <link rel="stylesheet" href="./podcast-premium.css">
+    <link rel="stylesheet" href="./float-button.css">
     <script src="https://unpkg.com/@dotlottie/player-component@latest/dist/dotlottie-player.js"></script>
     <!-- AOS Library CSS -->
     <link rel="stylesheet" href="https://unpkg.com/aos@2.3.1/dist/aos.css" />
+    <!-- Gravity Effect -->
+    <script src="./gravity.js"></script>
 </head>
 <body data-scroll-container>
 
