--- a/index.html
+++ b/index.html
@@ -126,7 +126,6 @@
                 <button id="podcast-trigger" class="podcast-mini-trigger">
                     <i class="fas fa-podcast"></i> Listen to my resume
                 </button>
-                
                 <div class="podcast-mini-player" id="podcast-mini-player">
                     <!-- D3 Visualization Container -->
                     <div id="podcast-visualizer" class="podcast-visualizer"></div>
@@ -176,6 +175,9 @@
                 </a>
                 <a href="mailto:samarth.mahendragowda@gmail.com" target="_blank" aria-label="Email">
                     <i class="fas fa-envelope"></i>
+                </a>
+                <a href="resumev2.pdf" download aria-label="Download Resume" class="social-icon">
+                    <i class="fas fa-download"></i>
                 </a>
             </div>
             
