--- a/index.html
+++ b/index.html
@@ -41,6 +41,26 @@
     <link rel="stylesheet" href="https://unpkg.com/aos@2.3.1/dist/aos.css" />
     <!-- Gravity Effect -->
     <script src="./gravity.js"></script>
+    <!-- Datadog RUM Initialization -->
+    <script>
+      (function(h,o,u,n,d){
+        h=h[d]=h[d]||{q:[],onReady:function(c){h.q.push(c)}};
+        d=o.createElement(u);d.async=1;d.src='https://www.datadoghq-browser-agent.com/us5/v6/datadog-rum.js';
+        n=o.getElementsByTagName(u)[0];n.parentNode.insertBefore(d,n);
+      })(window,document,'script','https://www.datadoghq-browser-agent.com/us5/v6/datadog-rum.js','DD_RUM');
+      window.DD_RUM.onReady(function(){
+        window.DD_RUM.init({
+          clientToken: 'pub38f8489207670d574651a6f0012c4b91',
+          applicationId: 'a6ca009c-7833-4647-8f49-552acdf085c9',
+          site: 'us5.datadoghq.com',
+          service: 'mygithubsite',
+          env: 'prod',
+          sessionSampleRate: 100,
+          sessionReplaySampleRate: 20,
+          defaultPrivacyLevel: 'mask-user-input',
+        });
+      });
+    </script>
 </head>
 <body data-scroll-container>
 
