--- a/index.html
+++ b/index.html
@@ -106,11 +106,7 @@
                 <div class="message-content">Hi there! I'm Samarth's assistant. How can I help you today?</div>
             </div>
         </div>
-        <div id="chatbot-starter-prompts" class="chatbot-starter-prompts">
-            <button class="chatbot-starter-prompt">Which of Samarth's projects best showcase his AI and data engineering expertise?</button>
-            <button class="chatbot-starter-prompt">Could you pull up a Samarth’s profile and highlight his main qualifications?</button>
-            <button class="chatbot-starter-prompt">How well does Samarth's profile match this job description?</button>
-        </div>
+        <div id="chatbot-starter-prompts" class="chatbot-starter-prompts"></div>
         <div class="chatbot-input-container">
             <input type="text" id="chatbot-input" class="chatbot-input" placeholder="Type your message here..." autocomplete="off" inputmode="text">
             <button id="chatbot-send" class="chatbot-send"><i class="fas fa-paper-plane"></i></button>
