Basic voice mode

--- a/index.html
+++ b/index.html
@@ -832,5 +832,6 @@
 <script src="./mindmap.js"></script>
 <script src="./chatbot.js"></script>
 
+  <script src="./chatbotvoice.js"></script>
 </body>
 </html>
