--- a/index.html
+++ b/index.html
@@ -200,6 +200,7 @@
             <a href="#about" class="button magnetic-button discover-more">Discover More</a>
         </div>
         
+        <div id="scroll-indicator"></div>
     </div>
 </section>
 
@@ -819,8 +820,7 @@
 <script src="https://d3js.org/d3.v7.min.js"></script>
 
 <!-- Custom Stylesheet -->
-<script src="https://cdnjs.cloudflare.com/ajax/libs/lottie-web/5.12.2/lottie.min.js"></script>
-    <script src="https://unpkg.com/@dotlottie/player-component@latest/dist/dotlottie-player.js"></script>
+<script src="https://unpkg.com/@dotlottie/player-component@latest/dist/dotlottie-player.js"></script>
 <!-- AOS Library JS -->
 <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
 <script>
