--- a/index.html
+++ b/index.html
@@ -832,6 +832,7 @@
 <script src="./podcast-player.js"></script>
 <script src="./mindmap.js"></script>
 <script src="./chatbot.js"></script>
+<script src="./call-popup.js"></script>
 
   <!-- Floating Call Assistant Button -->
   <div id="call-assistant-btn" class="call-assistant-btn" title="Call my personal assistant">
