--- a/index.html
+++ b/index.html
@@ -75,6 +75,13 @@
             <li><a href="#experience">Experience</a></li>
             <li><a href="#projects">Projects</a></li>
             <li><a href="#contact" class="nav-cta magnetic-button">Contact</a></li>
+            <li>
+                <a href="https://outlook.office.com/bookwithme/user/74b48346c31b4a70b85fef80821897ac@northeastern.edu/meetingtype/x4p_Azwdc0eqt7kyhO5fWg2?anonymous&ismsaljsauthenabled&ep=mlink"
+                   class="nav-cta magnetic-button"
+                   target="_blank">
+                  Schedule
+                </a>
+              </li>
         </ul>
         <div class="nav-mobile-toggle">
             <span></span>
