--- a/index.html
+++ b/index.html
@@ -145,6 +145,10 @@
             <div class="typing-container" style="margin-bottom: 0.3rem;">
                 <span id="typing-text"></span>
             </div>
+            <p class="one-liner animated-quote">
+                "Turning code into poetry. Automating the tedious. Designing for the next billion users."
+              </p>
+              
             
             <div class="podcast-mini-player-container">
                 <button id="podcast-trigger" class="podcast-mini-trigger">
