--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
 <!-- Hero Section -->
 <!-- <section class="hero-section" id="home"> -->
     <section class="hero-section" id="home" style="
-    background-image: url('./bg.png');
+    background-image: url('./bg2.png');
     background-position: center center;
     background-size: cover;
     background-repeat: no-repeat;
