Sound cloud icon

--- a/index.html
+++ b/index.html
@@ -209,6 +209,9 @@
                 <a href="resumev2.pdf" download aria-label="Download Resume" class="social-icon">
                     <i class="fas fa-download"></i>
                 </a>
+                <a href="https://soundcloud.com/samarth-182551000" target="_blank" aria-label="SoundCloud Profile", class="social-icon">
+                    <i class="fab fa-soundcloud"></i>
+                </a>
             </div>
             
             <a href="#about" class="button magnetic-button discover-more">Discover More</a>
